allows any file, add external notification email
